# fast_api_app_clasificacion_yolo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
PUNTO2/: Dockerfile  app.py  deployment.yaml  requirements.txt
PUNTO3/: Dockerfile  Dockerfile.frontend.dockerignore  docker-compose.yml  main.py  pyproject.toml  requirements-backend.txt  requirements-frontend.txt
PUNTO3/app/: schemas.py
PUNTO3/frontend/: app.py
app/: main.py  yolo_service.py
frontend/: app.py
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
